--- a/_posts/1010-01-01-final.md
+++ b/_posts/1010-01-01-final.md
@@ -2,11 +2,8 @@
 layout: post
 ---
 
-### Enjoy! 
+### Logistics
 
-```
-Created by:
-- Alex Gandzha 
-- Pavel Kulakovsky
-(DeepIDEA)
-```
+- breaks:
+- lunch:
+- 
